# daily-nousance

./: README.md  example.env  pyproject.toml  start.bat  start.sh
src/: bot.py  config.py
src/cogs/commands/: owner.py
src/cogs/core/: events.py  site_status.py
src/util/: code.py  errors.py
